# label-studio-brush-rle-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
original-code-for-reference/label_studio_sdk/converter/: brush.py
src/: lib.rs
tests/: test_decode_rle_benchmark.py  test_rle_benchmarks.py
