[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "label-studio-brush-rle-rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy>=1.24.4"]
[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
reinstall-package = ["label-studio-brush-rle-rs"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pillow>=10.4.0",
    "hypothesis>=6.113.0",
    "maturin>=1.9.6",
]

[tool.pytest.ini_options]
markers = ["benchmark: performance comparison benchmarks"]
