[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "label-studio-brush-rle-rs"
authors = [{ name = "teepoy" }]
description = "Rust implementation of run-length encoding for brush masks in Label Studio for speed."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy>=1.24.4,<3.0.0"]

[project.urls]
Homepage = "https://github.com/teepoy/label-studio-brush-rle-rs"
Repository = "https://github.com/teepoy/label-studio-brush-rle-rs"
[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
reinstall-package = ["label-studio-brush-rle-rs"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pillow>=10.4.0",
    "hypothesis>=6.113.0",
    "maturin>=1.9.6",
]

[tool.pytest.ini_options]
markers = ["benchmark: performance comparison benchmarks"]
